--- a/vanillatweaks/index.html
+++ b/vanillatweaks/index.html
@@ -31,6 +31,7 @@
     <link href="../styles/vanillatweaks/light.css" rel="stylesheet" type="text/css">
     <link href="../styles/default.css" rel="stylesheet" type="text/css">
     <script src="../scripts/modules.js"></script>
+    <script src="../scripts/theme.js"></script>
 </head>
 
 <body>
@@ -97,29 +98,29 @@
                         <li><a href="https://github.com/StrikerRockers-Mods/VanillaTweaks/">Source code on github</a></li>
                         <li><a href="../contactme.html">Contact</a></li>
                     </ul>
-                    <script>
-                        loadHomeString();
-                        if (document.cookie == "dark=true") {
-                            document.getElementById("themebox").checked = true;
-                            document.querySelector("link[href='../styles/vanillatweaks/light.css']").href = "../styles/vanillatweaks/dark.css";
-                        }
-                        onCheckThemeBox(true, false, '../styles/vanillatweaks/light.css', '../styles/vanillatweaks/dark.css')
-                    </script>
                 </main>
                 <div class="theme-switch-div">
-                    <p class="theme-switch-label">Dark Theme <label class="theme-switch">
-                                        <input type="checkbox" id="themebox" onclick="onCheckThemeBox(false, false, '../styles/vanillatweaks/light.css', '../styles/vanillatweaks/dark.css')">
-                                                <span class="slider round"></span>
-                                            </label>
+                    <p class="theme-switch-label">Dark Theme 
+                        <label class="theme-switch">
+                            <input type="checkbox" id="themebox" onclick="onCheckThemeBox(false, false, '../styles/vanillatweaks/light.css', '../styles/vanillatweaks/dark.css')">
+                            <span class="slider round"></span>
+                        </label>
                     </p>
                 </div>
+                <script>
+                    loadHomeString();
+                    if (document.cookie == "dark=true") {
+                        document.getElementById("themebox").checked = true;
+                        document.querySelector("link[href='../styles/vanillatweaks/light.css']").href = "../styles/vanillatweaks/dark.css";
+                    }
+                    onCheckThemeBox(true, false, '../styles/vanillatweaks/light.css', '../styles/vanillatweaks/dark.css')
+                </script>
             </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="../scripts/theme.js"></script>
 </body>
 
 </html>
