--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <div class="row">
             <div class="col-12">
                 <div class="rightbar">
-                    <a class="twitter-timeline" data-width="300" data-height="317" data-theme="light" href="https://twitter.com/StrikerRocker?ref_src=twsrc%5Etfw">Tweets by StrikerRocker</a>
+                    <!-- <a class="twitter-timeline" data-width="300" data-height="317" data-theme="light" href="https://twitter.com/StrikerRocker?ref_src=twsrc%5Etfw">Tweets by StrikerRocker</a>
                     <a class="twitter-timeline" data-width="300" data-height="317" data-theme="dark" href="https://twitter.com/StrikerRocker?ref_src=twsrc%5Etfw">Tweets by StrikerRocker</a>
                     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                    <iframe id="discord" src="https://discordapp.com/widget?id=325065492899299328&theme=light" width="100%" height="275" allowtransparency="true" frameborder="0"></iframe>
+                    <iframe id="discord" src="https://discordapp.com/widget?id=325065492899299328&theme=light" width="100%" height="275" allowtransparency="true" frameborder="0"></iframe> -->
                 </div>
                 <main>
                     <section>
@@ -52,14 +52,14 @@
                         <br>
                         <p>I'm a young developer currently learning software and web development through indie game and addon development.
                     </section>
-                    <!--<hr>
+                    <hr>
                     <section>
                         <h2>Commissions</h2>
                         <br>
                         <p>
                             I sometimes do modding commissions (this is highly dependent on the case) contact me if you're interested.
                         </p>
-                    </section>-->
+                    </section>
                     <hr>
                     <section>
                         <h2>Projects</h2>
@@ -78,7 +78,7 @@
                                 <a href="https://www.twitter.com/strikerrocker">
                                     <img id="twitter" src="assets/twitter_light.png" class="card-img-top contact" alt="Twitter logo">
                                     <div class="card-body">
-                                        <p class="card-title">Twitter - strikerrocker</p>
+                                        <p class="card-title">Twitter - StrikerRocker</p>
                                     </div>
                                 </a>
                             </div>
@@ -94,7 +94,7 @@
                                 <a href="https://www.github.com/strikerrocker">
                                     <img id="github" src="assets/github_light.png" class="card-img-top contact contact" alt="github logo">
                                     <div class="card-body">
-                                        <p class="card-title">Github - strikerrocker</p>
+                                        <p class="card-title">Github - StrikerRocker</p>
                                     </div>
                                 </a>
                             </div>
@@ -102,7 +102,7 @@
                                 <a href="https://www.curseforge.com/members/strikerrocker/projects">
                                     <img src="assets/curse-vertical_lightbg.png" class="card-img-top contact" alt="CurseForge logo">
                                     <div class="card-body">
-                                        <p class="card-title">CurseForge - strikerrocker</p>
+                                        <p class="card-title">CurseForge - StrikerRocker</p>
                                     </div>
                                 </a>
                             </div>
@@ -110,18 +110,20 @@
                                 <a href="https://www.twitch.tv/strikerrocker/">
                                     <img src="assets/twitch.png" class="card-img-top contact" alt="CurseForge logo">
                                     <div class="card-body">
-                                        <p class="card-title">CurseForge - strikerrocker</p>
+                                        <p class="card-title">Twitch - StrikerRocker</p>
                                     </div>
                                 </a>
                             </div>
                         </div>
                     </section>
                 </main>
-                <div class="theme-switch-div" style="align-content: flex-start;">
-                    <p class="theme-switch-label">Dark Theme <label class="theme-switch">
-                                <input type="checkbox" id="themebox" onclick="onCheckThemeBox(false,true,'styles/light.css','styles/dark.css')">
-                                            <span class="slider round"></span>
-                                        </label>
+
+                <div class="theme-switch-div">
+                    <p class="theme-switch-label">Dark Theme
+                        <label class="theme-switch">
+                            <input type="checkbox" id="themebox" onclick="onCheckThemeBox(false,true,'styles/light.css','styles/dark.css')">
+                                <span class="slider round"></span>
+                        </label>
                     </p>
                 </div>
             </div>
