Fix cards in home page and update sitemap

--- a/index.html
+++ b/index.html
@@ -77,40 +77,40 @@
                             <div class="card">
                                 <a href="https://www.twitter.com/strikerrocker">
                                     <img id="twitter" src="assets/twitter_light.png" class="card-img-top contact" alt="Twitter logo">
-                                    <div class="card-body">
-                                        <p class="card-title">Twitter - StrikerRocker</p>
+                                    <div class="card-body info-card">
+                                        <p class="card-title element_text">Twitter - StrikerRocker</p>
                                     </div>
                                 </a>
                             </div>
                             <div class="card">
                                 <a href="https://discord.gg/tqcqeSj">
                                     <img src="assets/Discord-Logo-Color.png" class="card-img-top contact" alt="Discord logo">
-                                    <div class="card-body">
-                                        <p class="card-title">Discord - StrikerRocker#7058</p>
+                                    <div class="card-body info-card">
+                                        <p class="card-title element_text">Discord - StrikerRocker#7058</p>
                                     </div>
                                 </a>
                             </div>
                             <div class="card">
                                 <a href="https://www.github.com/strikerrocker">
                                     <img id="github" src="assets/github_light.png" class="card-img-top contact contact" alt="github logo">
-                                    <div class="card-body">
-                                        <p class="card-title">Github - StrikerRocker</p>
+                                    <div class="card-body info-card">
+                                        <p class="card-title element_text">Github - StrikerRocker</p>
                                     </div>
                                 </a>
                             </div>
                             <div class="card">
                                 <a href="https://www.curseforge.com/members/strikerrocker/projects">
                                     <img src="assets/curse-vertical_lightbg.png" class="card-img-top contact" alt="CurseForge logo">
-                                    <div class="card-body">
-                                        <p class="card-title">CurseForge - StrikerRocker</p>
+                                    <div class="card-body info-card">
+                                        <p class="card-title element_text">CurseForge - StrikerRocker</p>
                                     </div>
                                 </a>
                             </div>
                             <div class="card">
                                 <a href="https://www.twitch.tv/strikerrocker/">
                                     <img src="assets/twitch.png" class="card-img-top contact" alt="CurseForge logo">
-                                    <div class="card-body">
-                                        <p class="card-title">Twitch - StrikerRocker</p>
+                                    <div class="card-body info-card">
+                                        <p class="card-title element_text">Twitch - StrikerRocker</p>
                                     </div>
                                 </a>
                             </div>
