--- a/vanillatweaks/index.html
+++ b/vanillatweaks/index.html
@@ -25,7 +25,8 @@
 
         gtag('config', 'UA-109233842-1');
     </script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="../styles/vanillatweaks/vanillatweaks.css" rel="stylesheet" type="text/css">
     <link href="../styles/vanillatweaks/light.css" rel="stylesheet" type="text/css">
     <link href="../styles/default.css" rel="stylesheet" type="text/css">
@@ -34,14 +35,17 @@
 </head>
 
 <body>
-    <header class="container-fluid splash"></header>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 mt-4 mb-4 text-center">
-                <h3 class="display-1" id="title">VanillaTweaks</h3>
+    <div id="header">
+        <header class="container-fluid splash"></header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 mt-4 mb-4 text-center">
+                    <h3 class="display-1" id="title">VanillaTweaks</h3>
+                </div>
             </div>
         </div>
     </div>
+   
     <nav class="nav nav-pills nav-fill justify-content-center mb-5">
         <a class="nav-link active" id="home" onclick="setupPill(this)">Home</a>
         <a class="nav-link" id="crafting" onclick="setupPill(this)">Crafting</a>
@@ -58,50 +62,61 @@
             <div class="col-12">
                 <main id="card-slot">
                     <p>
-                        <strong>VanillaTweaks</strong> is a mod for Minecraft ported from <a href="https://minecraft.curseforge.com/projects/craft-by-anon10w1z">Craft++</a> mod. Many more feautures were added. This mod aims to enhance Minecraft without
+                        <strong>VanillaTweaks</strong> is a mod for Minecraft ported from <a
+                            href="https://minecraft.curseforge.com/projects/craft-by-anon10w1z">Craft++</a> mod. Many
+                        more feautures were added. This mod aims to enhance Minecraft without
                         going overboard.
 
                     </p>
                     <p>
-                        VanillaTweaks is extremely configurable. Everything from enabling and disabling enchantments to hoe as sickle can be configured straight from the config GUI, accessible from the mods menu or the game menu. It is advised to delete your config file every
+                        VanillaTweaks is extremely configurable. Everything from enabling and disabling enchantments to
+                        hoe as sickle can be configured straight from the config GUI, accessible from the mods menu or
+                        the game menu. It is advised to delete your config file every
                         time you update Vanilla Tweaks, for the configuration options may have changed.
                     </p>
                     <p>
-                        I hope you enjoy playing this mod as much as I have enjoyed learning about modding and building it!
+                        I hope you enjoy playing this mod as much as I have enjoyed learning about modding and building
+                        it!
                     </p>
                     <p>
                         <em>
-                        -- StrikerRocker
-                    </em>
+                            -- StrikerRocker
+                        </em>
                     </p>
                     <br>
                     <h3>How to install</h3>
                     <ol>
                         <li>
-                            VanillaTweaks requires Minecraft with forge. Download the forge install from <a href="http://files.minecraftforge.net/">here</a> and run it.
+                            VanillaTweaks requires Minecraft with forge. Download the forge install from <a
+                                href="http://files.minecraftforge.net/">here</a> and run it.
                         </li>
                         <li>
-                            Download the latest version of VanillaTweaks from curseforge.com and put the .jar file in your mods folder. This normally lives in the same folder as your resourcepacks folder.
+                            Download the latest version of VanillaTweaks from curseforge.com and put the .jar file in
+                            your mods folder. This normally lives in the same folder as your resourcepacks folder.
                         </li>
                         <li>
                             Run the game from your Minecraft launcher using your <strong>new Forge</strong> profile.
                         </li>
                     </ol>
-                    (There are tutorials on how to set up Forge <a href="https://minecraft.gamepedia.com/Mods/Installing_Forge_mods">here</a> and <a href="https://www.wikihow.com/Install-Minecraft-Forge">here</a> if you're stuck.)
+                    (There are tutorials on how to set up Forge <a
+                        href="https://minecraft.gamepedia.com/Mods/Installing_Forge_mods">here</a> and <a
+                        href="https://www.wikihow.com/Install-Minecraft-Forge">here</a> if you're stuck.)
                     <br><br><br>
                     <h3>Links</h3>
                     <ul>
                         <li>
                             <a href="https://minecraft.curseforge.com/projects/vanillatweaks">CurseForge</a>
                         </li>
-                        <li><a href="https://github.com/StrikerRockers-Mods/VanillaTweaks/">Source code on github</a></li>
+                        <li><a href="https://github.com/StrikerRockers-Mods/VanillaTweaks/">Source code on github</a>
+                        </li>
                         <li><a href="../contactme.html">Contact</a></li>
                     </ul>
                 </main>
                 <div class="theme-switch-div">
                     <p class="theme-switch-label">Dark Theme
                         <label class="theme-switch">
-                            <input type="checkbox" id="themebox" onclick="onCheckThemeBox(false, false, '../styles/vanillatweaks/light.css', '../styles/vanillatweaks/dark.css')">
+                            <input type="checkbox" id="themebox"
+                                onclick="onCheckThemeBox(false, false, '../styles/vanillatweaks/light.css', '../styles/vanillatweaks/dark.css')">
                             <span class="slider round"></span>
                         </label>
                     </p>
@@ -117,9 +132,15 @@
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
